external-crates/move/crates/move-compiler/tests/move_check/parser/friend_decl_qualified_struct.exp
error[E03006]: unexpected name in this position
  ┌─ tests/move_check/parser/friend_decl_qualified_struct.move:7:12
  │
7 │     friend 0x42::A::A;
  │            ^^^^^^^^^^ Unexpected module member identifier. A module member identifier is not a valid module

